--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,20 @@ a:hover {
 a:active {
   color: #155D95;
 }
-
+header{
+    padding: 14px 24px 14px 24px;
+    margin: -10px, -10px, 0px, -10px;
+    height: 175px;
+    position: relative;
+    background: black;
+    background-size: 100%;
+    height: 300px;
+    
+}
+header p{
+    font-size: 20px;
+    
+}
 
 
 
